@@ -1,3 +1,8 @@
+2008-04-04  Øyvind Kolås  <pippin@o-hand.com>
+
+	* examples/blockbox.c: added 'about' screen as well as play|pause
+	toggle for the simulation.
+
 2008-04-03  Øyvind Kolås  <pippin@o-hand.com>
 
 	Initial svn import of clutter-box2d.
